# hft_20250902

./: CMakeLists.txt  HFT_TCP_CLIENT_README.md  HFT_TCP_CLIENT_TEST_RESULTS.md  README.md  TEST_RESULTS.md  build.sh  compile.sh  latency_results.txt  nanosecond_latency_results.txt  nanosecond_latency_results_100k.txt  quick_latency_test.sh  run_latency_test.sh  simple_latency_test.sh  simple_test.sh  test.sh  test_b.sh  test_hft_tcp_client.sh  wilson_final_test.sh  wilson_simple_test.sh  wilson_test.sh
inc/: hft_server.h  hft_tcp_client.h  latency_client.h
src/: hft_latency_test_100k.cpp  hft_server.cpp  hft_tcp_client.cpp  hft_tcp_client_simple.cpp  hft_tcp_client_test.cpp  latency_client.cpp  latency_test_main.cpp  main.cpp  simple_latency_test.cpp
